fixed spacing issue with mattext

--- a/src/elements/mattext/mattext.less
+++ b/src/elements/mattext/mattext.less
@@ -1,6 +1,10 @@
 /* Material text - p.3 White space created either by manual space characters or tab characters is preserved within a mattext element. */
-mattext {
+//mattext {
   /*white-space: pre-wrap;*/
-  display: inline-block;
+//  display: inline-block;
   /*unicode-bidi: embed;*/
-}
+//}
+
+//mattext + mattext {
+//  display: inline-block;
+//}
